--- a/templates/login.html
+++ b/templates/login.html
@@ -28,6 +28,9 @@
             <a href="/stats" class="btn feature-btn">
                 <span class="icon">🚲</span> Ride Stats
             </a>
+            <a href="/camera" class="btn feature-btn">
+                <span class="icon">🎥</span> Live Camera
+            </a>
             
             <a href="{{ url_for('logout') }}">Logout</a>
         </div>
