--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BIKO - Login</title>
+    <link rel="icon" type="image/png" href="static/images/mini_logo.png"/>
+    <title>BIKO</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
@@ -13,9 +14,7 @@
 
     <main class="main-content">
         <div class="button-container">
-            <a href="#" class="">
-                <button id="bike-toggle-btn" class="btn" style="background-color: #ffffff; color: rgb(0, 0, 0); width: 130px;">Loading...</button>
-            </a>
+            
             <a href="/map" class="btn feature-btn">
                 <span class="icon">🗺️</span> Map
             </a>
@@ -31,6 +30,9 @@
             <a href="/camera" class="btn feature-btn">
                 <span class="icon">🎥</span> Live Camera
             </a>
+            <a href="/park" class="btn feature-btn">
+                <span class="icon">⚡</span> Park
+            </a>
             
             <a href="{{ url_for('logout') }}">Logout</a>
         </div>
@@ -38,66 +40,6 @@
 </body>
 
 
-<script>
-    // Fetch bike status when the page loads
-    async function fetchBikeStatus() {
-        try {
-            const response = await fetch('/api/get_bike_status');
-            const data = await response.json();
-            const button = document.getElementById('bike-toggle-btn');
 
-            if (data.status === "success") {
-                updateButton(data.bike_status, data.bike_id);
-            } else {
-                button.innerText = "Error";
-                button.disabled = true;
-            }
-        } catch (error) {
-            console.error("Error fetching bike status:", error);
-        }
-    }
-
-    // Update the button text and style based on bike status
-    function updateButton(status, bikeId) {
-        const button = document.getElementById('bike-toggle-btn');
-        button.dataset.bikeId = bikeId; // Store bike ID in button
-        if (status === 1) {
-            button.innerText = "UNLOCK";
-            button.style.backgroundColor = "#00ab00";
-        } else {
-            button.innerText = "LOCK";
-            button.style.backgroundColor = "#1f50ff";
-        }
-    }
-
-    // Handle button click to toggle bike status
-    document.getElementById('bike-toggle-btn').addEventListener('click', async (event) => {
-        event.preventDefault();
-        const button = event.target;
-        const bikeId = button.dataset.bikeId; // Get bike ID from button
-
-        try {
-            const response = await fetch('/toggle_bike_status', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ bike_id: bikeId })
-            });
-
-            const data = await response.json();
-            if (data.status === "success") {
-                updateButton(data.new_status, bikeId);
-            } else {
-                alert(data.message);
-            }
-        } catch (error) {
-            console.error("Error toggling bike status:", error);
-        }
-    });
-
-    // Fetch bike status on page load
-    fetchBikeStatus();
-</script>
 
 </html>
