--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BIKO - Notification Center</title>
+    <link rel="icon" type="image/png" href="static/images/mini_logo.png"/>
+    <title>BIKO</title>
     <style>
         @font-face {
             font-family: 'MyCustomFont';
@@ -20,6 +21,7 @@
             background-color: #f5f5f5;
             height: 100vh;
             overflow: hidden;
+            user-select: none;
         }
 
         .header {
