--- a/templates/stats.html
+++ b/templates/stats.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BIKO - Ride Stats</title>
+    <link rel="icon" type="image/png" href="static/images/mini_logo.png"/>
+    <title>BIKO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <style>
@@ -15,6 +16,7 @@
             background-color: #f5f5f5;
             height: 100vh;
             overflow: hidden;
+            user-select: none;
         }
 
         .header {
